# BareCNN

./: README.md  pyproject.toml
barecnn/core/: math.py  param_init.py  parameter.py
barecnn/layers/: activation.py  convolutional.py  flatten.py  layer.py  linear.py  pooling.py
barecnn/loses/: .#cross_entropy.py  cross_entropy.py  loss.py  mse.py
barecnn/metrics/: accuracy.py  metric.py  precision.py  recall.py
barecnn/models/: model.py
barecnn/optimizer/: adam.py  optimizer.py  sgd.py
