[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barecnn"
version = "0.1.0" 
description = "A bare-bones Convolutional Neural Network (CNN) framework built from scratch with NumPy."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
]
    